--- a/components/footer.html
+++ b/components/footer.html
@@ -2,7 +2,7 @@
 <footer id="footer">
     <div class="container py-4">
         <div class="copyright">
-            <b>VEM</b> &copy; 2025 | All Rights Reserved
+            <b>EMMC</b> &copy; 2025 | All Rights Reserved
         </div>
         <div class="credits">
             <!-- All the links in the footer should remain intact. -->
