--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,8 @@ h6,
 #header .logo img {
     padding: 0;
     margin: 0;
-    max-height: 40px;
+    max-height: 60px;
+    width: auto;
 }
 
 #main {
@@ -313,17 +314,15 @@ h6,
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
-    /*Alterações*/
-    background: url(../img/colors4.png) top center;
-    /*background-size: cover;*/
-    /*overflow: hidden;*/
-    /**/
+    background: url(../img/banner.png) top center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    
     width: 100%;
     height: 70vh;
-    /*background: #fef8f5;*/
-    /*background: rgba(47, 3, 3, 0.10);*/
+    position: relative;
     border-bottom: 2px solid #fcebe3;
-    margin: 72px 0 -72px 0;
 }
 
 #about:before {
@@ -827,7 +826,6 @@ section {
 .team .member {
     text-align: center;
     margin-bottom: 20px;
-    background: #343a40;
     position: relative;
     overflow: hidden;
 }
@@ -847,6 +845,12 @@ section {
     bottom: 0;
     transition: bottom 0.4s;
 }
+.member img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    object-position: center;
+}
 .team .member .member-info-content h4 {
     font-weight: 700;
     margin-bottom: 2px;
@@ -858,29 +862,6 @@ section {
     display: block;
     font-size: 13px;
     color: #fff;
-}
-.team .member .social {
-    position: absolute;
-    left: -50px;
-    top: 0;
-    bottom: 0;
-    width: 50px;
-    transition: left ease-in-out 0.3s;
-    background: rgba(78, 64, 57, 0.6);
-    text-align: center;
-}
-.team .member .social a {
-    transition: color 0.3s;
-    display: block;
-    color: #fff;
-    margin-top: 15px;
-}
-.team .member .social a:hover {
-    color: #eb5d1e;
-}
-.team .member .social i {
-    font-size: 18px;
-    margin: 0 2px;
 }
 .team .member:hover .member-info {
     background: linear-gradient(
@@ -895,10 +876,6 @@ section {
 .team .member:hover .member-info-content {
     bottom: 30px;
     transition: bottom 0.4s;
-}
-.team .member:hover .social {
-    left: 0;
-    transition: left ease-in-out 0.3s;
 }
 
 /*--------------------------------------------------------------
